# SPLICE-autodoc

./: .readthedocs.yaml  README.md  generate_rst.py  generate_summaries.py  pyproject.toml
docs/: requirements.txt
docs/source/: conf.py  index.rst
splice-api/: pyproject.toml
splice-api/app/: main.py
splice-cli/: pyproject.toml
splice-cli/src/splice_cli/: __init__.py  greetings.py
splice-lib/: pyproject.toml
splice-lib/src/splice_lib/: __init__.py  generate_random.py  main.py
splice-pipeline/: pyproject.toml
splice-pipeline/src/splice_pipeline/: main.py
splice-tests/: pyproject.toml  test_splice_cli.py  test_splice_lib.py
splice-ui/: main.py  pyproject.toml
splice-ui/src/splice_ui/: main.py
